--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,3 +1,78 @@
+@media (max-width: 756px) {
+  #menuToggle {
+    display: inline-block;
+    position: fixed;
+    z-index: 1;
+    right: 10%;
+    -webkit-user-select: none;
+    user-select: none;
+    margin-left: auto;
+  }
+  .nav-menu {
+    width: 300px;
+  }
+  #menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    -webkit-touch-callout: none;
+  }
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #000000;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  #menu {
+    position: absolute;
+    padding: 50px;
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+  #menu li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+  #menuToggle input:checked ~ ul {
+    transform: translate(-80%, 0);
+  }
+}
+
 @media (min-width: 756px) {
   .mobile,
   .laptop {
@@ -52,6 +127,12 @@
     display: inline-block;
     width: 49%;
   }
+  .nav-menu__list:not(:last-child) {
+    margin-right: 10px;
+  }
+  #menuToggle input {
+    display: none;
+  }
 }
 @media (min-width: 1024px) {
   .mobile,
@@ -104,9 +185,6 @@
   .footer__list {
     width: 24%;
   }
-  .product__list:nth-child(-n + 4) {
-    margin-top: 0;
-  }
   .saleTop__content {
     max-width: 100%;
     text-align: left;
@@ -116,12 +194,15 @@
   }
 }
 @media (min-width: 1440px) {
-  .product__list {
-    margin: 0;
-  }
   .product {
     margin: 0;
     max-width: 1440px;
     justify-content: space-between;
+  }
+  .product__list:nth-child(-n + 4) {
+    margin-top: 0;
+  }
+  .product__list:not(:nth-child(-n + 4)) {
+    margin-top: 20px;
   }
 }
